theme fixes:
- rename darktable elegant to darktable-elegant-dark
- add a light theme on top of dark and grey ones
- make colour shifts consistents between the 3 themes
- fix a bug where selected files in filechooserdialog were not highlighted (reported by @cryptomilk)
- fix an issue where thumbnails overlays were too dark (reported by @AxelG-DE)
- declare the filmstrip background colour
- refactor and simplify rules
- TODO: button:hover colours rules are not honoured, find what is messing with them

--- a/data/themes/darktable-icons-dark.css
+++ b/data/themes/darktable-icons-dark.css
@@ -1,6 +1,6 @@
 /*
     This file is part of darktable,
-    copyright (c) 2019 Nicolas Auffray
+    copyright (c) 2019 Pascal Obry
 
     darktable is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -16,5 +16,5 @@
     along with darktable.  If not, see <http://www.gnu.org/licenses/>.
 */
 
-@import url("darktable-icons-dark.css");
-@import url("darktable-elegant-grey.css");
+@import url("darktable-icons-darker.css");
+@import url("darktable-elegant-dark.css");
